k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-webhook-service
  labels:
    app: chatbot-webhook-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-webhook-service
  template:
    metadata:
      labels:
        app: chatbot-webhook-service
    spec:
      containers:
        - name: chatbot-webhook-service
          image: gabrielfull/chatbot-webhook-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
